--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -144,6 +144,7 @@ torch==2.3.1
 torch-tb-profiler==0.4.3
 torchaudio==2.3.1
 torchvision==0.18.1
+torchmetrics==1.4.0.post0
 tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
