--- a/requirements_linux.txt
+++ b/requirements_linux.txt
@@ -14,6 +14,7 @@ cachetools==5.3.2
 certifi==2022.12.7
 cffi==1.16.0
 charset-normalizer==2.1.1
+click==8.1.7
 colorama==0.4.6
 comm==0.2.1
 contourpy==1.2.0
@@ -21,6 +22,7 @@ cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+docker-pycreds==0.4.0
 e2cnn==0.2.3
 einops==0.7.0
 exceptiongroup==1.2.0
@@ -30,6 +32,8 @@ filelock==3.9.0
 fonttools==4.47.2
 fqdn==1.5.1
 fsspec==2023.4.0
+gitdb==4.0.11
+GitPython==3.1.43
 google-auth==2.26.2
 google-auth-oauthlib==1.2.0
 grpcio==1.60.0
@@ -129,7 +133,10 @@ rsa==4.9
 scikit-learn==1.4.0
 scipy==1.11.4
 Send2Trash==1.8.2
+sentry-sdk==2.10.0
+setproctitle==1.3.3
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
@@ -143,8 +150,8 @@ tomli==2.0.1
 torch==2.3.1
 torch-tb-profiler==0.4.3
 torchaudio==2.3.1
-torchvision==0.18.1
 torchmetrics==1.4.0.post0
+torchvision==0.18.1
 tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
@@ -154,6 +161,7 @@ typing_extensions==4.9.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==1.26.13
+wandb==0.17.4
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
