settings for small models

--- a/src/Benchmarks/training/_settings_data.json
+++ b/src/Benchmarks/training/_settings_data.json
@@ -22,16 +22,16 @@
             "lr": 0.001,
             "num_epochs": 200,
             "UNet_vanilla": {
-                "lbda": 2,
+                "lbda": 16,
                 "bilinear": true,
-                "kernel_size": 3,
+                "kernel_size": 7,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
@@ -41,18 +41,18 @@
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
-                "mode": "mixed",
+                "mode": "pure",
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
                 "kernel_size": 7,
-                "mode": "mixed"
+                "mode": "pure"
             }
         }
     },
@@ -79,16 +79,16 @@
             "lr": 0.0001,
             "num_epochs": 150,
             "UNet_vanilla": {
-                "lbda": 2,
+                "lbda": 16,
                 "bilinear": true,
-                "kernel_size": 3,
+                "kernel_size": 7,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
@@ -98,18 +98,18 @@
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
-                "mode": "mixed",
+                "mode": "pure",
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
                 "kernel_size": 7,
-                "mode": "mixed"
+                "mode": "pure"
             }
         }
     },
@@ -136,16 +136,16 @@
             "lr": 0.0005,
             "num_epochs": 500,
             "UNet_vanilla": {
-                "lbda": 2,
+                "lbda": 16,
                 "bilinear": true,
-                "kernel_size": 3,
+                "kernel_size": 7,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
@@ -159,7 +159,7 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "acti": "relu",
                 "acti_kwargs": {
@@ -193,7 +193,7 @@
             "lr": 0.0001,
             "num_epochs": 250,
             "UNet_vanilla": {
-                "lbda": 2,
+                "lbda": 16,
                 "bilinear": true,
                 "kernel_size": 3,
                 "acti": "relu",
@@ -202,7 +202,7 @@
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
@@ -212,18 +212,18 @@
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
-                "mode": "mixed",
+                "mode": "pure",
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 16,
                 "bilinear": true,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
                 "kernel_size": 7,
-                "mode": "mixed"
+                "mode": "pure"
             }
         }
     },
@@ -269,7 +269,7 @@
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
-                "mode": "mixed",
+                "mode": "pure",
                 "bn": false
             },
             "UNet_e2cnn": {
@@ -280,7 +280,7 @@
                     "inplace": true
                 },
                 "kernel_size": 7,
-                "mode": "mixed"
+                "mode": "pure"
             }
         }
     }
