--- a/src/Benchmarks/training/_settings_data_local.json
+++ b/src/Benchmarks/training/_settings_data_local.json
@@ -22,7 +22,7 @@
             "lr": 0.0001,
             "num_epochs": 20,
             "UNet_vanilla": {
-                "lbda": 4,
+                "lbda": 6,
                 "bilinear": true,
                 "kernel_size": 3,
                 "acti": "relu",
@@ -31,13 +31,13 @@
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 10,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
-                "TensorCorePad": true,
+                "TensorCorePad": false,
                 "cutoff": "strong",
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
@@ -45,20 +45,21 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 23,
                 "bilinear": true,
+                "gspace": "C4",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "mode": "pure"
             }
         }
     },
     "kvasir": {
         "name": "kvasir",
-        "path": "/home/rob/Documents/3_projects/bench/kvasir",
+        "path": "C:/Users/vdelchev/Documents/datasets/kvasir",
         "multiclass_palette_path" : null,
         "annotation_file" : null,
         "in_channels": 3,
@@ -71,28 +72,28 @@
             "rot": true,
             "Normalize": [[0.5, 0.5, 0.5], [0.5, 0.5, 0.5]]
         },
-        "batch_size": 4,
+        "batch_size": 8,
         "shuffle": true,
-        "num_workers": 32,
+        "num_workers": 0,
         "models": {
             "input_size": 224,
             "lr": 0.0001,
-            "num_epochs": 300,
+            "num_epochs": 75,
             "UNet_vanilla": {
-                "lbda": 2,
+                "lbda": 6,
                 "bilinear": true,
-                "kernel_size": 5,
+                "kernel_size": 3,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 }
             },
             "UNet_bcnn": {
-                "lbda": 4,
+                "lbda": 10,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
-                "TensorCorePad": true,
+                "TensorCorePad": false,
                 "cutoff": "strong",
                 "kernel_size": 9,
                 "acti": "tanh",
@@ -102,13 +103,14 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 4,
+                "lbda": 23,
                 "bilinear": true,
+                "gspace": "C4",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "mode": "pure"
             }
         }
@@ -136,7 +138,7 @@
             "lr": 0.0005,
             "num_epochs": 10,
             "UNet_vanilla": {
-                "lbda": 2,
+                "lbda": 6,
                 "bilinear": true,
                 "kernel_size": 3,
                 "acti": "relu",
@@ -145,13 +147,13 @@
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 10,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
-                "TensorCorePad": true,
+                "TensorCorePad": false,
                 "cutoff": "strong",
-                "kernel_size": 5,
+                "kernel_size": 9,
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
@@ -159,13 +161,14 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 23,
                 "bilinear": true,
+                "gspace": "C4",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
-                "kernel_size": 5,
+                "kernel_size": 9,
                 "mode": "pure"
             }
         }
@@ -193,7 +196,7 @@
             "lr": 0.01,
             "num_epochs": 5,
             "UNet_vanilla": {
-                "lbda": 4,
+                "lbda": 6,
                 "bilinear": true,
                 "kernel_size": 3,
                 "acti": "relu",
@@ -202,13 +205,13 @@
                 }
             },
             "UNet_bcnn": {
-                "lbda": 8,
+                "lbda": 10,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
-                "TensorCorePad": true,
+                "TensorCorePad": false,
                 "cutoff": "strong",
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
@@ -216,13 +219,14 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 8,
+                "lbda": 23,
+                "gspace": "C4",
                 "bilinear": true,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "mode": "pure"
             }
         }
@@ -264,22 +268,22 @@
             "lr": 0.001,
             "num_epochs": 2,
             "UNet_vanilla": {
-                "lbda": 16,
+                "lbda": 6,
                 "bilinear": true,
-                "kernel_size": 7,
+                "kernel_size": 3,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 }
             },
             "UNet_bcnn": {
-                "lbda": 16,
+                "lbda": 10,
                 "bilinear": true,
                 "reflex_inv": false,
                 "scale_inv": false,
-                "TensorCorePad": true,
+                "TensorCorePad": false,
                 "cutoff": "strong",
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "acti": "tanh",
                 "acti_kwargs": {
                 },
@@ -287,13 +291,14 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 16,
+                "lbda": 23,
+                "gspace": "C4",
                 "bilinear": true,
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
                 },
-                "kernel_size": 7,
+                "kernel_size": 9,
                 "mode": "pure"
             }
         }
