--- a/src/Benchmarks/training/_settings_data.json
+++ b/src/Benchmarks/training/_settings_data.json
@@ -105,7 +105,7 @@
             "UNet_e2cnn": {
                 "lbda": 31,
                 "bilinear": true,
-                "gspace": "C8",
+                "gspace": "D4",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
@@ -161,9 +161,9 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 4.65,
+                "lbda": 31,
                 "bilinear": true,
-                "gspace": "C4",
+                "gspace": "D4",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
