--- a/src/Benchmarks/training/_settings_data.json
+++ b/src/Benchmarks/training/_settings_data.json
@@ -22,7 +22,7 @@
             "lr": 0.0001,
             "num_epochs": 200,
             "UNet_vanilla": {
-                "lbda": 1.25,
+                "lbda": 1.65,
                 "bilinear": true,
                 "kernel_size": 3,
                 "acti": "relu",
@@ -45,9 +45,9 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 31,
+                "lbda": 6.65,
                 "bilinear": true,
-                "gspace": "D4",
+                "gspace": "C8",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
@@ -103,9 +103,9 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 31,
+                "lbda": 6.65,
                 "bilinear": true,
-                "gspace": "D4",
+                "gspace": "C8",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
@@ -161,9 +161,9 @@
                 "bn": false
             },
             "UNet_e2cnn": {
-                "lbda": 31,
+                "lbda": 6.65,
                 "bilinear": true,
-                "gspace": "D4",
+                "gspace": "C8",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
