--- a/src/Benchmarks/training/_settings_data.json
+++ b/src/Benchmarks/training/_settings_data.json
@@ -279,7 +279,7 @@
             "UNet_e2cnn": {
                 "lbda": 4.65,
                 "bilinear": true,
-                "gspace": "C4",
+                "gspace": "D4",
                 "acti": "relu",
                 "acti_kwargs": {
                     "inplace": true
